syntax = "proto3";

option csharp_namespace = "TDiary.Grpc.Protos";

service PingProto {
  rpc Ping (PingRequest) returns (PingReply);
}

message PingRequest {
}

message PingReply {
}